--- a/index.html
+++ b/index.html
@@ -150,11 +150,11 @@
                         `;
                         resultDiv.classList.remove('hidden');
                     } else {
-                        resultDiv.innerHTML = '<p>لا توجد درجات لهذا الرقم الشخصي</p>';
+                        resultDiv.innerHTML = '<p>الرجاء التأكد من الرقم الشخصي</p>';
                         resultDiv.classList.remove('hidden');
                     }
                 } else {
-                    resultDiv.innerHTML = '<p>لا توجد درجات لهذا الرقم الشخصي</p>';
+                    resultDiv.innerHTML = '<p>الرجاء التأكد من الرقم الشخصي</p>';
                     resultDiv.classList.remove('hidden');
                 }
             } catch (error) {
