--- a/index.html
+++ b/index.html
@@ -168,4 +168,8 @@
         }
     </script>
 </body>
+      <footer>
+    <p>© مدينة عيسى الاعدادية للبنين</p>
+    <p>تصميم الاستاذ/ السيد علي شرف</p>
+</footer>
 </html>
