--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
 <h2>استعلام سجل الطالب</h2>
     <input type="text" id="cprInput" placeholder="CPR/ادخل الرقم الشخصي" required>
     <select id="subjectSelector">
+     <option value="" disabled selected>اختر المادة</option>
         <option value="اللغة العربية">اللغة العربية</option>
         <option value="اللغة الانجليزية">اللغة الانجليزية</option>
         <option value="الرياضيات">الرياضيات</option>
