--- a/index.html
+++ b/index.html
@@ -170,7 +170,9 @@
     </script>
 </body>
       <footer>
-    <p>© مدينة عيسى الاعدادية للبنين</p>
-    <p>تصميم الاستاذ/ السيد علي شرف</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p><strong>&copy; مدينة عيسى الاعدادية للبنين</strong></p>
+<p>تصميم الاستاذ/ السيد علي شرف</p>
 </footer>
 </html>
