--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 </head>
 <body>
      <header>
-        <img src="https://moebh-my.sharepoint.com/personal/921102372_moe_bh/Documents/AAK_33e2ac22-9image_story.jpg" alt="مدرسة مدينة عيسى الإعدادية للبنين">
+        <img src="https://moebh-my.sharepoint.com/personal/921102372_moe_bh/Documents/AAK_33e2ac22-9image_story.jpg" width="200px">
     </header>
     <h1>مدرسة مدينة عيسى الإعدادية للبنين</h1>
     <h2>استعلام سجل الطالب</h2>
