--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
         <option value="العلوم">العلوم</option>
         <option value="التربية الإسلامية">التربية الإسلامية</option>
         <option value="المواد الاجتماعية">المواد الاجتماعية</option>
+        <option value="المواطنة">المواطنة</option>
     </select>
     <button onclick="fetchGrades()">ارسال</button>
     <div id="loading" class="hidden">...جاري التحميل</div>
