--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
     </style>
 </head>
 <body>
-     <header>
-        <img src="https://menafn.com/updates/pr/2020-01/05/AAK_33e2ac22-9image_story.png" width="200px">
+    <header>
+        <img src="https://menafn.com/updates/pr/2020-01/05/AAK_33e2ac22-9image_story.png" width="200px" alt="Logo">
     </header>
     <h1>مدرسة مدينة عيسى الإعدادية للبنين</h1>
     <h2>استعلام سجل الطالب</h2>
@@ -127,25 +127,35 @@
     <!-- Popup for error message -->
     <div class="popup" id="errorPopup">
         <div class="popup-content">
-            <p>الرجاء التأكد من الرقم الشخصي</p>
+            <p id="errorMessage">الرجاء التأكد من الرقم الشخصي</p>
             <button onclick="closePopup()">إغلاق</button>
         </div>
     </div>
 
     <script>
         async function fetchGrades() {
-            const cpr = document.getElementById('cprInput').value;
+            const cpr = document.getElementById('cprInput').value.trim();
             const subject = encodeURIComponent(document.getElementById('subjectSelector').value);
             const resultDiv = document.getElementById('result');
             const studentNameDiv = document.getElementById('studentName');
             const loadingDiv = document.getElementById('loading');
             const errorPopup = document.getElementById('errorPopup');
+            const errorMessage = document.getElementById('errorMessage');
 
             resultDiv.innerHTML = '';
             resultDiv.classList.add('hidden');
             studentNameDiv.innerHTML = '';
-            loadingDiv.classList.remove('hidden'); // عرض مؤشر التحميل
-            errorPopup.style.display = 'none'; // إخفاء النافذة المنبثقة
+            loadingDiv.classList.remove('hidden'); // Show loading indicator
+            errorPopup.style.display = 'none'; // Hide popup
+            errorMessage.textContent = 'الرجاء التأكد من الرقم الشخصي'; // Reset error message
+
+            if (!cpr || !subject) {
+                errorMessage.textContent = 'يرجى ملء جميع الحقول';
+                errorPopup.style.display = 'flex';
+                loadingDiv.classList.add('hidden'); // Hide loading indicator
+                return;
+            }
+
             try {
                 const response = await fetch(`https://script.google.com/macros/s/AKfycbwI1v94_XjzgFmfeFzdsBOp7A8mn0_YhD2YfGJIe0vV086f7Fh2vhIiCFzH8U23PhILRw/exec?subject=${subject}&cpr=${cpr}`);
                 
@@ -176,22 +186,24 @@
                         `;
                         resultDiv.classList.remove('hidden');
                     } else {
-                        errorPopup.style.display = 'flex'; // عرض النافذة المنبثقة
+                        errorMessage.textContent = 'لا توجد بيانات للعرض';
+                        errorPopup.style.display = 'flex'; // Show popup
                     }
                 } else {
-                    errorPopup.style.display = 'flex'; // عرض النافذة المنبثقة
+                    errorMessage.textContent = 'لا توجد بيانات للعرض';
+                    errorPopup.style.display = 'flex'; // Show popup
                 }
             } catch (error) {
                 console.error(error);
-                resultDiv.innerHTML = `<p>خطأ في جلب البيانات ${error.message}</p>`;
-                resultDiv.classList.remove('hidden');
+                errorMessage.textContent = `خطأ في جلب البيانات: ${error.message}`;
+                errorPopup.style.display = 'flex'; // Show popup
             } finally {
-                loadingDiv.classList.add('hidden'); // إخفاء مؤشر التحميل
+                loadingDiv.classList.add('hidden'); // Hide loading indicator
             }
         }
 
         function closePopup() {
-            document.getElementById('errorPopup').style.display = 'none'; // إخفاء النافذة المنبثقة
+            document.getElementById('errorPopup').style.display = 'none'; // Hide popup
         }
     </script>
 
