--- a/index.html
+++ b/index.html
@@ -103,12 +103,21 @@
     </style>
 </head>
 <body>
-    <header>
-        <img src="https://menafn.com/updates/pr/2020-01/05/AAK_33e2ac22-9image_story.png" width="200px" alt="Logo">
+     <header>
+        <img src="https://menafn.com/updates/pr/2020-01/05/AAK_33e2ac22-9image_story.png" width="200px">
     </header>
     <h1>مدرسة مدينة عيسى الإعدادية للبنين</h1>
     <h2>استعلام سجل الطالب</h2>
     <input type="text" id="cprInput" placeholder="CPR/ادخل الرقم الشخصي" required>
+    <select id="subjectSelector">
+        <option value="" disabled selected>اختر المادة</option>
+        <option value="اللغة العربية">اللغة العربية</option>
+        <option value="اللغة الانجليزية">اللغة الانجليزية</option>
+        <option value="الرياضيات">الرياضيات</option>
+        <option value="العلوم">العلوم</option>
+        <option value="التربية الإسلامية">التربية الإسلامية</option>
+        <option value="المواد الاجتماعية">المواد الاجتماعية</option>
+    </select>
     <button onclick="fetchGrades()">ارسال</button>
     <div id="loading" class="hidden">...جاري التحميل</div>
     <div class="student-name" id="studentName"></div>
@@ -117,89 +126,71 @@
     <!-- Popup for error message -->
     <div class="popup" id="errorPopup">
         <div class="popup-content">
-            <p id="errorMessage">الرجاء التأكد من الرقم الشخصي</p>
+            <p>الرجاء التأكد من الرقم الشخصي</p>
             <button onclick="closePopup()">إغلاق</button>
         </div>
     </div>
 
     <script>
-       async function fetchGrades() {
-    const cpr = document.getElementById('cprInput').value.trim();
-    const subject = encodeURIComponent(document.getElementById('subjectSelector').value);
-    const resultDiv = document.getElementById('result');
-    const studentNameDiv = document.getElementById('studentName');
-    const loadingDiv = document.getElementById('loading');
-    const errorPopup = document.getElementById('errorPopup');
-    const errorMessage = document.getElementById('errorMessage');
+        async function fetchGrades() {
+            const cpr = document.getElementById('cprInput').value;
+            const subject = encodeURIComponent(document.getElementById('subjectSelector').value);
+            const resultDiv = document.getElementById('result');
+            const studentNameDiv = document.getElementById('studentName');
+            const loadingDiv = document.getElementById('loading');
+            const errorPopup = document.getElementById('errorPopup');
 
-    resultDiv.innerHTML = '';
-    resultDiv.classList.add('hidden');
-    studentNameDiv.innerHTML = '';
-    loadingDiv.classList.remove('hidden'); // Show loading indicator
-    errorPopup.style.display = 'none'; // Hide popup
-    errorMessage.textContent = 'الرجاء التأكد من الرقم الشخصي'; // Reset error message
-
-    if (!cpr || !subject) {
-        errorMessage.textContent = 'يرجى ملء جميع الحقول';
-        errorPopup.style.display = 'flex';
-        loadingDiv.classList.add('hidden'); // Hide loading indicator
-        return;
-    }
-
-    try {
-        const response = await fetch(`https://script.google.com/macros/s/AKfycbyP9Lf7WXWa_RV-IgL4430m3TeMhNZcyafeDF0aBT8KL4BBG2rKuzXH5_B7o-bI1ZsrZA/exec?subject=${subject}&cpr=${cpr}`);
-        
-        if (!response.ok) {
-            throw new Error('Network response was not ok');
-        }
-
-        const data = await response.json();
-        if (data.error) {
-            errorMessage.textContent = data.error; // Display specific error message from the server
-            errorPopup.style.display = 'flex'; // Show popup
-            return;
-        }
-
-        if (data.length > 0) {
-            const student = data[0];
-
-            let tableRows = '';
-
-            // Iterate over the student data and skip "CPR" and "اسم الطالب"
-            for (const [key, value] of Object.entries(student)) {
-                if (key !== "CPR" && key !== "اسم الطالب") {
-                    tableRows += `<tr><td>${value}</td><td>${key}</td></tr>`;
+            resultDiv.innerHTML = '';
+            resultDiv.classList.add('hidden');
+            studentNameDiv.innerHTML = '';
+            loadingDiv.classList.remove('hidden'); // عرض مؤشر التحميل
+            errorPopup.style.display = 'none'; // إخفاء النافذة المنبثقة
+            try {
+                const response = await fetch(`https://script.google.com/macros/s/AKfycbwI1v94_XjzgFmfeFzdsBOp7A8mn0_YhD2YfGJIe0vV086f7Fh2vhIiCFzH8U23PhILRw/exec?subject=${subject}&cpr=${cpr}`);
+                
+                if (!response.ok) {
+                    throw new Error('Network response was not ok');
                 }
-            }
 
-            if (tableRows) {
-                resultDiv.innerHTML = `
-                    <h2>نتائج الدرجات</h2>
-                    <table>
-                        <tr><th>الدرجة</th><th>التقييم</th></tr>
-                        ${tableRows}
-                    </table>
-                `;
+                const data = await response.json();
+                if (data.length > 0) {
+                    const student = data[0];
+
+                    let tableRows = '';
+
+                    // Iterate over the student data and skip "CPR" and "اسم الطالب"
+                    for (const [key, value] of Object.entries(student)) {
+                        if (key !== "CPR" && key !== "اسم الطالب") {
+                            tableRows += `<tr><td>${value}</td><td>${key}</td></tr>`;
+                        }
+                    }
+
+                    if (tableRows) {
+                        resultDiv.innerHTML = `
+                            <h2>نتائج الدرجات</h2>
+                            <table>
+                                <tr><th>الدرجة</th><th>التقييم</th></tr>
+                                ${tableRows}
+                            </table>
+                        `;
+                        resultDiv.classList.remove('hidden');
+                    } else {
+                        errorPopup.style.display = 'flex'; // عرض النافذة المنبثقة
+                    }
+                } else {
+                    errorPopup.style.display = 'flex'; // عرض النافذة المنبثقة
+                }
+            } catch (error) {
+                console.error(error);
+                resultDiv.innerHTML = `<p>خطأ في جلب البيانات ${error.message}</p>`;
                 resultDiv.classList.remove('hidden');
-            } else {
-                errorMessage.textContent = 'لا توجد بيانات للعرض';
-                errorPopup.style.display = 'flex'; // Show popup
+            } finally {
+                loadingDiv.classList.add('hidden'); // إخفاء مؤشر التحميل
             }
-        } else {
-            errorMessage.textContent = 'لا توجد بيانات للعرض';
-            errorPopup.style.display = 'flex'; // Show popup
         }
-    } catch (error) {
-        console.error(error);
-        errorMessage.textContent = `خطأ في جلب البيانات: ${error.message}`;
-        errorPopup.style.display = 'flex'; // Show popup
-    } finally {
-        loadingDiv.classList.add('hidden'); // Hide loading indicator
-    }
-}
 
         function closePopup() {
-            document.getElementById('errorPopup').style.display = 'none'; // Hide popup
+            document.getElementById('errorPopup').style.display = 'none'; // إخفاء النافذة المنبثقة
         }
     </script>
 
