--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>مدرسة مدينة عيسى الإعدادية للبنين</title>
+    <title>استعلام مقعد الطالب</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 20px;
-            background-color: #d9e2f3;
-            color: #003366;
+            background-color: #e9ecef;
+            color: #343a40;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -18,14 +18,14 @@
         }
         header {
             width: 100%;
-            background-color: white;
+            background-color: #ffffff;
             padding: 20px;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
         h1 {
             margin: 10px 0;
         }
-        input, select, button {
+        input, button {
             padding: 10px;
             margin: 10px 0;
             border: 1px solid #ccc;
@@ -34,169 +34,55 @@
             text-align: center;
         }
         button {
-            background-color: #003366;
+            background-color: #007bff;
             color: white;
             border: none;
             cursor: pointer;
         }
         button:hover {
-            background-color: #002244;
+            background-color: #0056b3;
         }
-        table {
+        #result {
             margin-top: 20px;
-            border-collapse: collapse;
-            width: 300px;
-            background-color: white;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-        }
-        #loading {
-            font-size: 1.5em;
-            color: #003366;
-            margin-top: 20px;
-        }
-        th, td {
-            border: 1px solid #ddd;
-            padding: 8px;
-            text-align: right;
-        }
-        th {
-            background-color: #003366;
-            color: white;
-        }
-        tr:hover {
-            background-color: #f1f1f1;
-        }
-        .hidden {
             display: none;
-        }
-        .student-name {
-            margin-top: 20px;
-            font-weight: bold;
-            font-size: 1.2em;
-        }
-        /* Styles for popup */
-        .popup {
-            display: none;
-            position: fixed;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.5);
-            justify-content: center;
-            align-items: center;
-        }
-        .popup-content {
-            background-color: white;
-            padding: 20px;
-            border-radius: 5px;
-            text-align: center;
-        }
-        .popup button {
-            margin-top: 10px;
-            background-color: #003366;
-            color: white;
-            border: none;
-            padding: 10px;
-            cursor: pointer;
         }
     </style>
 </head>
 <body>
-     <header>
-        <img src="https://menafn.com/updates/pr/2020-01/05/AAK_33e2ac22-9image_story.png" width="200px">
+    <header>
+        <h1>استعلام مقعد الطالب</h1>
     </header>
-    <h1>مدرسة مدينة عيسى الإعدادية للبنين</h1>
-    <h2>استعلام سجل الطالب</h2>
-    <input type="text" id="cprInput" placeholder="CPR/ادخل الرقم الشخصي" required>
-    <select id="subjectSelector">
-        <option value="" disabled selected>اختر المادة</option>
-        <option value="اللغة العربية">اللغة العربية</option>
-        <option value="اللغة الانجليزية">اللغة الانجليزية</option>
-        <option value="الرياضيات">الرياضيات</option>
-        <option value="العلوم">العلوم</option>
-        <option value="التربية الإسلامية">التربية الإسلامية</option>
-        <option value="المواد الاجتماعية">المواد الاجتماعية</option>
-    </select>
-    <button onclick="fetchGrades()">ارسال</button>
-    <div id="loading" class="hidden">...جاري التحميل</div>
-    <div class="student-name" id="studentName"></div>
-    <div id="result" class="hidden"></div>
-
-    <!-- Popup for error message -->
-    <div class="popup" id="errorPopup">
-        <div class="popup-content">
-            <p>الرجاء التأكد من الرقم الشخصي</p>
-            <button onclick="closePopup()">إغلاق</button>
-        </div>
-    </div>
+    <h2>أدخل الرقم الشخصي للطالب</h2>
+    <input type="text" id="studentId" placeholder="الرقم الشخصي" required>
+    <button onclick="checkSeat()">استعلام</button>
+    <div id="result"></div>
 
     <script>
-        async function fetchGrades() {
-            const cpr = document.getElementById('cprInput').value;
-            const subject = encodeURIComponent(document.getElementById('subjectSelector').value);
+        function checkSeat() {
+            const studentId = document.getElementById('studentId').value.trim();
             const resultDiv = document.getElementById('result');
-            const studentNameDiv = document.getElementById('studentName');
-            const loadingDiv = document.getElementById('loading');
-            const errorPopup = document.getElementById('errorPopup');
-
-            resultDiv.innerHTML = '';
-            resultDiv.classList.add('hidden');
-            studentNameDiv.innerHTML = '';
-            loadingDiv.classList.remove('hidden'); // عرض مؤشر التحميل
-            errorPopup.style.display = 'none'; // إخفاء النافذة المنبثقة
-            try {
-                const response = await fetch(`https://script.google.com/macros/s/AKfycbwI1v94_XjzgFmfeFzdsBOp7A8mn0_YhD2YfGJIe0vV086f7Fh2vhIiCFzH8U23PhILRw/exec?subject=${subject}&cpr=${cpr}`);
-                
-                if (!response.ok) {
-                    throw new Error('Network response was not ok');
-                }
-
-                const data = await response.json();
-                if (data.length > 0) {
-                    const student = data[0];
-
-                    let tableRows = '';
-
-                    // Iterate over the student data and skip "CPR" and "اسم الطالب"
-                    for (const [key, value] of Object.entries(student)) {
-                        if (key !== "CPR" && key !== "اسم الطالب") {
-                            tableRows += `<tr><td>${value}</td><td>${key}</td></tr>`;
-                        }
-                    }
-
-                    if (tableRows) {
-                        resultDiv.innerHTML = `
-                            <h2>نتائج الدرجات</h2>
-                            <table>
-                                <tr><th>الدرجة</th><th>التقييم</th></tr>
-                                ${tableRows}
-                            </table>
-                        `;
-                        resultDiv.classList.remove('hidden');
-                    } else {
-                        errorPopup.style.display = 'flex'; // عرض النافذة المنبثقة
-                    }
-                } else {
-                    errorPopup.style.display = 'flex'; // عرض النافذة المنبثقة
-                }
-            } catch (error) {
-                console.error(error);
-                resultDiv.innerHTML = `<p>خطأ في جلب البيانات ${error.message}</p>`;
-                resultDiv.classList.remove('hidden');
-            } finally {
-                loadingDiv.classList.add('hidden'); // إخفاء مؤشر التحميل
+            
+            if (!studentId) {
+                resultDiv.innerHTML = '<p style="color: red;">الرجاء إدخال الرقم الشخصي.</p>';
+                resultDiv.style.display = 'block';
+                return;
             }
-        }
 
-        function closePopup() {
-            document.getElementById('errorPopup').style.display = 'none'; // إخفاء النافذة المنبثقة
+            // هنا يمكنك إضافة منطق لجلب بيانات المقعد من قاعدة بيانات أو API
+            // مثال بسيط:
+            const mockData = {
+                '12345': 'المقعد: 12، الصف: 2A',
+                '67890': 'المقعد: 5، الصف: 1B'
+            };
+
+            const seatInfo = mockData[studentId] || 'لا توجد بيانات للرقم الشخصي المدخل.';
+            resultDiv.innerHTML = `<p>${seatInfo}</p>`;
+            resultDiv.style.display = 'block';
         }
     </script>
 
     <footer>
-        <p>© مدينة عيسى الاعدادية للبنين</p>
-        <p>تصميم الاستاذ/ السيد علي شرف</p>
+        <p>© 2024 مدرسة مدينة عيسى الإعدادية للبنين</p>
     </footer>
 </body>
 </html>
