--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>استعلام مقعد الطالب</title>
+    <title>مدرسة مدينة عيسى الإعدادية للبنين</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 20px;
-            background-color: #e9ecef;
-            color: #343a40;
+            background-color: #d9e2f3;
+            color: #003366;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -18,14 +18,14 @@
         }
         header {
             width: 100%;
-            background-color: #ffffff;
+            background-color: white;
             padding: 20px;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
         h1 {
             margin: 10px 0;
         }
-        input, button {
+        input, select, button {
             padding: 10px;
             margin: 10px 0;
             border: 1px solid #ccc;
@@ -34,25 +34,80 @@
             text-align: center;
         }
         button {
-            background-color: #007bff;
+            background-color: #003366;
             color: white;
             border: none;
             cursor: pointer;
         }
         button:hover {
-            background-color: #0056b3;
+            background-color: #002244;
         }
-        #result {
+        table {
             margin-top: 20px;
+            border-collapse: collapse;
+            width: 300px;
+            background-color: white;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        }
+        #loading {
+            font-size: 1.5em;
+            color: #003366;
+            margin-top: 20px;
+        }
+        th, td {
+            border: 1px solid #ddd;
+            padding: 8px;
+            text-align: right;
+        }
+        th {
+            background-color: #003366;
+            color: white;
+        }
+        tr:hover {
+            background-color: #f1f1f1;
+        }
+        .hidden {
             display: none;
+        }
+        .student-name {
+            margin-top: 20px;
+            font-weight: bold;
+            font-size: 1.2em;
+        }
+        /* Styles for popup */
+        .popup {
+            display: none;
+            position: fixed;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            justify-content: center;
+            align-items: center;
+        }
+        .popup-content {
+            background-color: white;
+            padding: 20px;
+            border-radius: 5px;
+            text-align: center;
+        }
+        .popup button {
+            margin-top: 10px;
+            background-color: #003366;
+            color: white;
+            border: none;
+            padding: 10px;
+            cursor: pointer;
         }
     </style>
 </head>
 <body>
-    <header>
-        <h1>استعلام مقعد الطالب</h1>
+     <header>
+        <img src="https://menafn.com/updates/pr/2020-01/05/AAK_33e2ac22-9image_story.png" width="200px">
     </header>
-    <h2>أدخل الرقم الشخصي للطالب</h2>
+    <h1>مدرسة مدينة عيسى الإعدادية للبنين</h1>
+    <h2>استعلام سجل الطالب</h2>
     <input type="text" id="studentId" placeholder="الرقم الشخصي" required>
     <button onclick="checkSeat()">استعلام</button>
     <div id="result"></div>
