--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <img src="https://menafn.com/updates/pr/2020-01/05/AAK_33e2ac22-9image_story.png" width="200px">
     </header>
     <h1>مدرسة مدينة عيسى الإعدادية للبنين</h1>
-    <h2>استعلام سجل الطالب</h2>
+    <h2>استعلام مقعد الطالب</h2>
     <input type="text" id="studentId" placeholder="الرقم الشخصي" required>
     <button onclick="checkSeat()">استعلام</button>
     <div id="result"></div>
@@ -138,6 +138,7 @@
 
     <footer>
         <p>© 2024 مدرسة مدينة عيسى الإعدادية للبنين</p>
+                <p>تصميم الاستاذ/ السيد علي شرف</p>
     </footer>
 </body>
 </html>
