--- a/index.html
+++ b/index.html
@@ -1,144 +1,60 @@
+
+
 <!DOCTYPE html>
 <html lang="ar">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>مدرسة مدينة عيسى الإعدادية للبنين</title>
+    <title>استعلام مقعد الطالب</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 20px;
-            background-color: #d9e2f3;
-            color: #003366;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
+            background-color: #f2f2f2;
+            color: #333;
             text-align: center;
         }
-        header {
-            width: 100%;
-            background-color: white;
-            padding: 20px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        }
-        h1 {
-            margin: 10px 0;
-        }
-        input, select, button {
+        input, button {
             padding: 10px;
-            margin: 10px 0;
+            margin: 10px;
             border: 1px solid #ccc;
             border-radius: 5px;
-            width: 300px;
-            text-align: center;
+            width: 200px;
         }
         button {
-            background-color: #003366;
+            background-color: #007bff;
             color: white;
             border: none;
             cursor: pointer;
         }
         button:hover {
-            background-color: #002244;
+            background-color: #0056b3;
         }
-        table {
+        #result {
             margin-top: 20px;
-            border-collapse: collapse;
-            width: 300px;
-            background-color: white;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-        }
-        #loading {
-            font-size: 1.5em;
-            color: #003366;
-            margin-top: 20px;
-        }
-        th, td {
-            border: 1px solid #ddd;
-            padding: 8px;
-            text-align: right;
-        }
-        th {
-            background-color: #003366;
-            color: white;
-        }
-        tr:hover {
-            background-color: #f1f1f1;
-        }
-        .hidden {
-            display: none;
-        }
-        .student-name {
-            margin-top: 20px;
-            font-weight: bold;
-            font-size: 1.2em;
-        }
-        /* Styles for popup */
-        .popup {
-            display: none;
-            position: fixed;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.5);
-            justify-content: center;
-            align-items: center;
-        }
-        .popup-content {
-            background-color: white;
-            padding: 20px;
-            border-radius: 5px;
-            text-align: center;
-        }
-        .popup button {
-            margin-top: 10px;
-            background-color: #003366;
-            color: white;
-            border: none;
-            padding: 10px;
-            cursor: pointer;
         }
     </style>
 </head>
 <body>
-     <header>
-        <img src="https://menafn.com/updates/pr/2020-01/05/AAK_33e2ac22-9image_story.png" width="200px">
-    </header>
-    <h1>مدرسة مدينة عيسى الإعدادية للبنين</h1>
-    <h2>استعلام مقعد الطالب</h2>
+    <h1>استعلام مقعد الطالب</h1>
     <input type="text" id="studentId" placeholder="الرقم الشخصي" required>
     <button onclick="checkSeat()">استعلام</button>
     <div id="result"></div>
 
     <script>
-        function checkSeat() {
+        async function checkSeat() {
             const studentId = document.getElementById('studentId').value.trim();
+            const response = await fetch(`https://script.google.com/macros/s/AKfycbwia2rYs4VrKl3jEgDY55cgwYG9kFx74oUgR76OeirqymuY74mwdalCUUCpYVGJLsuhCg/exec?id=${studentId}`);
+            const data = await response.json();
+
             const resultDiv = document.getElementById('result');
-            
-            if (!studentId) {
-                resultDiv.innerHTML = '<p style="color: red;">الرجاء إدخال الرقم الشخصي.</p>';
-                resultDiv.style.display = 'block';
-                return;
+            if (data.id) {
+                resultDiv.innerHTML = `<p>المقعد: ${data.seat}، الصف: ${data.class}</p>`;
+            } else {
+                resultDiv.innerHTML = `<p style="color: red;">${data}</p>`;
             }
-
-            // هنا يمكنك إضافة منطق لجلب بيانات المقعد من قاعدة بيانات أو API
-            // مثال بسيط:
-            const mockData = {
-                '12345': 'المقعد: 12، الصف: 2A',
-                '67890': 'المقعد: 5، الصف: 1B'
-            };
-
-            const seatInfo = mockData[studentId] || 'لا توجد بيانات للرقم الشخصي المدخل.';
-            resultDiv.innerHTML = `<p>${seatInfo}</p>`;
-            resultDiv.style.display = 'block';
         }
     </script>
-
-    <footer>
-        <p>© 2024 مدرسة مدينة عيسى الإعدادية للبنين</p>
-                <p>تصميم الاستاذ/ السيد علي شرف</p>
-    </footer>
 </body>
 </html>
