--- a/index.html
+++ b/index.html
@@ -1,3 +1,86 @@
+<!DOCTYPE html>
+
+<html lang="ar">
+
+<head>
+
+<meta charset="UTF-8">
+
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<title>استعلام مقعد الطالب</title>
+
+<style>
+
+body {
+
+font-family: Arial, sans-serif;
+
+margin: 0;
+
+padding: 20px;
+
+background-color: #f2f2f2;
+
+color: #333;
+
+text-align: center;
+
+}
+
+input, button {
+
+padding: 10px;
+
+margin: 10px;
+
+border: 1px solid #ccc;
+
+border-radius: 5px;
+
+width: 200px;
+
+}
+
+button {
+
+background-color: #007bff;
+
+color: white;
+
+border: none;
+
+cursor: pointer;
+
+}
+
+button:hover {
+
+background-color: #0056b3;
+
+}
+
+#result {
+
+margin-top: 20px;
+
+}
+
+</style>
+
+</head>
+
+<body>
+
+<h1>استعلام مقعد الطالب</h1>
+
+<input type="text" id="studentId" placeholder="الرقم الشخصي" required>
+
+<button onclick="checkSeat()">استعلام</button>
+
+<div id="result"></div>
+xml
+
 <script>
     async function checkSeat() {
         const studentId = document.getElementById('studentId').value.trim();
@@ -12,3 +95,7 @@
         }
     }
 </script>
+
+</body>
+
+</html>
