--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ margin-top: 20px;
 
 <div id="result"></div>
 <script>
-    async function checkSeat() {
+    async function Grade Fetcher() {
         const studentId = document.getElementById('studentId').value.trim();
         const response = await fetch(`https://script.google.com/macros/s/AKfycbwia2rYs4VrKl3jEgDY55cgwYG9kFx74oUgR76OeirqymuY74mwdalCUUCpYVGJLsuhCg/exec?id=${studentId}`);
         const data = await response.json();
