--- a/index.html
+++ b/index.html
@@ -1,99 +1,73 @@
 <!DOCTYPE html>
-
 <html lang="ar">
-
 <head>
-
-<meta charset="UTF-8">
-
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-<title>استعلام مقعد الطالب</title>
-
-<style>
-
-body {
-
-font-family: Arial, sans-serif;
-
-margin: 0;
-
-padding: 20px;
-
-background-color: #f2f2f2;
-
-color: #333;
-
-text-align: center;
-
-}
-
-input, button {
-
-padding: 10px;
-
-margin: 10px;
-
-border: 1px solid #ccc;
-
-border-radius: 5px;
-
-width: 200px;
-
-}
-
-button {
-
-background-color: #007bff;
-
-color: white;
-
-border: none;
-
-cursor: pointer;
-
-}
-
-button:hover {
-
-background-color: #0056b3;
-
-}
-
-#result {
-
-margin-top: 20px;
-
-}
-
-</style>
-
-</head>
-
-<body>
-
-<h1>استعلام مقعد الطالب</h1>
-
-<input type="text" id="studentId" placeholder="الرقم الشخصي" required>
-
-<button onclick="checkSeat()">استعلام</button>
-
-<div id="result"></div>
-<script>
-    async function Grade Fetcher() {
-        const studentId = document.getElementById('studentId').value.trim();
-        const response = await fetch(`https://script.google.com/macros/s/AKfycbwia2rYs4VrKl3jEgDY55cgwYG9kFx74oUgR76OeirqymuY74mwdalCUUCpYVGJLsuhCg/exec?id=${studentId}`);
-        const data = await response.json();
-
-        const resultDiv = document.getElementById('result');
-        if (data.id) {
-            resultDiv.innerHTML = `<p>المقعد: ${data.seat}، الصف: ${data.class}</p>`;
-        } else {
-            resultDiv.innerHTML = `<p style="color: red;">${data}</p>`;
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>استعلام مقعد الطالب</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 20px;
+            background-color: #f2f2f2;
+            color: #333;
+            text-align: center;
         }
-    }
-</script>
+        input, button {
+            padding: 10px;
+            margin: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            width: 200px;
+        }
+        button {
+            background-color: #007bff;
+            color: white;
+            border: none;
+            cursor: pointer;
+        }
+        button:hover {
+            background-color: #0056b3;
+        }
+        #result {
+            margin-top: 20px;
+        }
+    </style>
+</head>
+<body>
+    <h1>استعلام مقعد الطالب</h1>
+    <input type="text" id="studentId" placeholder="الرقم الشخصي" required>
+    <button onclick="checkSeat()">استعلام</button>
+    <div id="result"></div>
 
+    <script>
+        async function checkSeat() {
+            const studentId = document.getElementById('studentId').value.trim();
+            const resultDiv = document.getElementById('result');
+
+            if (!studentId) {
+                resultDiv.innerHTML = '<p style="color: red;">يرجى إدخال الرقم الشخصي.</p>';
+                return;
+            }
+
+            try {
+                const response = await fetch(`https://script.google.com/macros/s/AKfycbw61a_vSRHW_F2gLLLnm9z8du1jISHzQTLRmqqZOjIfBoRF48EUfafwToefjlq22kZpHA/exec?id=${studentId}`);
+                
+                if (!response.ok) {
+                    throw new Error('خطأ في الشبكة.');
+                }
+
+                const data = await response.json();
+                
+                if (data.id) {
+                    resultDiv.innerHTML = `<p>المقعد: ${data.seat}، الصف: ${data.class}</p>`;
+                } else {
+                    resultDiv.innerHTML = `<p style="color: red;">${data}</p>`;
+                }
+            } catch (error) {
+                resultDiv.innerHTML = `<p style="color: red;">حدث خطأ: ${error.message}</p>`;
+            }
+        }
+    </script>
 </body>
-
 </html>
