--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             loadingDiv.classList.remove('hidden'); // عرض مؤشر التحميل
             errorPopup.style.display = 'none'; // إخفاء النافذة المنبثقة
             try {
-            const response = await fetch(`https://script.google.com/macros/s/AKfycbwia2rYs4VrKl3jEgDY55cgwYG9kFx74oUgR76OeirqymuY74mwdalCUUCpYVGJLsuhCg/exec?id=${studentId}`););
+            const response = await fetch(`https://script.google.com/macros/s/AKfycbwia2rYs4VrKl3jEgDY55cgwYG9kFx74oUgR76OeirqymuY74mwdalCUUCpYVGJLsuhCg/exec?CPR=${CPR}`););
                 
                 if (!response.ok) {
                     throw new Error('Network response was not ok');
