--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <h1>مدرسة مدينة عيسى الإعدادية للبنين</h1>
     <h2>استعلام سجل الطالب</h2>
     <input type="text" id="cprInput" placeholder="CPR/ادخل الرقم الشخصي" required>
-    <button onclick="fetchGrades()">ارسال</button>
+    <button onclick="GetClass()">ارسال</button>
     <div id="loading" class="hidden">...جاري التحميل</div>
     <div class="student-name" id="studentName"></div>
     <div id="result" class="hidden"></div>
@@ -113,7 +113,7 @@
     </div>
 
     <script>
-        async function fetchGrades() {
+        async function GetClass() {
             const cpr = document.getElementById('cprInput').value;
             const resultDiv = document.getElementById('result');
             const studentNameDiv = document.getElementById('studentName');
