--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <img src="https://menafn.com/updates/pr/2020-01/05/AAK_33e2ac22-9image_story.png" width="200px">
     </header>
     <h1>مدرسة مدينة عيسى الإعدادية للبنين</h1>
-    <h2>استعلام سجل الطالب</h2>
+    <h2>استعلام مقعد الطالب</h2>
     <input type="text" id="cprInput" placeholder="CPR/ادخل الرقم الشخصي" required>
     <button onclick="GetClass()">ارسال</button>
     <div id="loading" class="hidden">...جاري التحميل</div>
