--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>الحصول على الدرجات</title>
+    <title>مدرسة مدينة عيسى الإعدادية للبنين</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -16,7 +16,16 @@
             align-items: center;
             text-align: center;
         }
-        input, button {
+        header {
+            width: 100%;
+            background-color: white;
+            padding: 20px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+        h1 {
+            margin: 10px 0;
+        }
+        input, select, button {
             padding: 10px;
             margin: 10px 0;
             border: 1px solid #ccc;
@@ -33,14 +42,73 @@
         button:hover {
             background-color: #002244;
         }
-        #result {
+        table {
             margin-top: 20px;
+            border-collapse: collapse;
+            width: 300px;
+            background-color: white;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        }
+        #loading {
+            font-size: 1.5em;
+            color: #003366;
+            margin-top: 20px;
+        }
+        th, td {
+            border: 1px solid #ddd;
+            padding: 8px;
+            text-align: right;
+        }
+        th {
+            background-color: #003366;
+            color: white;
+        }
+        tr:hover {
+            background-color: #f1f1f1;
+        }
+        .hidden {
             display: none;
+        }
+        .student-name {
+            margin-top: 20px;
+            font-weight: bold;
+            font-size: 1.2em;
+        }
+        /* Styles for popup */
+        .popup {
+            display: none;
+            position: fixed;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            justify-content: center;
+            align-items: center;
+        }
+        .popup-content {
+            background-color: white;
+            padding: 20px;
+            border-radius: 5px;
+            text-align: center;
+        }
+        .popup button {
+            margin-top: 10px;
+            background-color: #003366;
+            color: white;
+            border: none;
+            padding: 10px;
+            cursor: pointer;
         }
     </style>
 </head>
 <body>
-    <h1>الحصول على درجات الطالب</h1>
+     <header>
+        <img src="https://menafn.com/updates/pr/2020-01/05/AAK_33e2ac22-9image_story.png" width="200px">
+    </header>
+    <h1>مدرسة مدينة عيسى الإعدادية للبنين</h1>
+    <h2>استعلام سجل الطالب</h2>
+
     <input type="text" id="cprInput" placeholder="ادخل الرقم الشخصي (CPR)" required>
     <button onclick="fetchGrades()">استعلام</button>
     <div id="result"></div>
@@ -60,7 +128,7 @@
                 const data = await response.json();
                 if (data.length > 0) {
                     const student = data[0];
-                    resultDiv.innerHTML = `<h2>نتائج الدرجات</h2><p>اسم الطالب: ${student["اسم الطالب"]}</p><p>الدرجة: ${student["الدرجة"]}</p>`;
+                    resultDiv.innerHTML = `<h2>نتائج الدرجات</h2><p>اسم الطالب: ${student["اسم الطالب"]}</p><p>المقعد: ${student["المقعد"]}</p>`;
                 } else {
                     resultDiv.innerHTML = '<p>لا توجد بيانات للرقم الشخصي المدخل.</p>';
                 }
