--- a/index.html
+++ b/index.html
@@ -107,8 +107,7 @@
         <img src="https://menafn.com/updates/pr/2020-01/05/AAK_33e2ac22-9image_story.png" width="200px">
     </header>
     <h1>مدرسة مدينة عيسى الإعدادية للبنين</h1>
-    <h2>استعلام سجل الطالب</h2>
-
+    <h2>استعلام جلوس</h2>
     <input type="text" id="cprInput" placeholder="ادخل الرقم الشخصي (CPR)" required>
     <button onclick="fetchGrades()">استعلام</button>
     <div id="result"></div>
@@ -119,6 +118,13 @@
             const resultDiv = document.getElementById('result');
             resultDiv.innerHTML = ''; // Clear previous results
 
+            // Validate CPR input
+            if (!/^\d+$/.test(cpr)) {
+                resultDiv.innerHTML = '<p>يرجى إدخال رقم CPR صحيح.</p>';
+                resultDiv.style.display = 'block';
+                return;
+            }
+
             try {
                 const response = await fetch(`https://script.google.com/macros/s/AKfycbwxZBziWaH-ssVv3Fkf9_W4DoPLu5NQlJ20ZOlyixJFl2z4efwMc-TmRF4eS1TaBNBc/exec?CPR=${cpr}`);
                 if (!response.ok) {
@@ -128,7 +134,7 @@
                 const data = await response.json();
                 if (data.length > 0) {
                     const student = data[0];
-                    resultDiv.innerHTML = `<h2>نتائج الدرجات</h2><p>اسم الطالب: ${student["اسم الطالب"]}</p><p>المقعد: ${student["المقعد"]}</p>`;
+                    resultDiv.innerHTML = `<h2>نتائج الدرجات</h2><p>اسم الطالب: ${student["اسم الطالب"]}</p><p>الدرجة: ${student["رقم الجلوس"]}</p>`;
                 } else {
                     resultDiv.innerHTML = '<p>لا توجد بيانات للرقم الشخصي المدخل.</p>';
                 }
